Update on docker entrypoint.sh